2008-12-12 Fixed warning in hist() with numpy 1.2 - MM

2008-12-12 Removed external packages: configobj and enthought.traits
           which are only required by the experimental traited config
           and are somewhat out of date. If needed, install them 
           independently, see:

           http://code.enthought.com/projects/traits

           and:

           http://www.voidspace.org.uk/python/configobj.html

2008-12-12 Added support to asign labels to histograms of multiple
           data. - MM

=================================================================
2008-12-11 Released 0.98.5 at svn r6573

2008-12-11 Use subprocess.Popen instead of os.popen in dviread
           (Windows problem reported by Jorgen Stenarson) - JKS

2008-12-10 Added Michael's font_manager fix and Jae-Joon's
           figure/subplot fix.  Bumped version number to 0.98.5 - JDH

=================================================================
2008-12-09 Released 0.98.4 at svn r6536

2008-12-08 Added mdehoon's native macosx backend from sf patch 2179017 - JDH

2008-12-08 Removed the prints in the set_*style commands.  Return the
           list of pprinted strings instead - JDH

2008-12-08 Some of the changes Michael made to improve the output of
           the property tables in the rest docs broke of made
           difficult to use some of the interactive doc helpers, eg
           setp and getp.  Having all the rest markup in the ipython
           shell also confused the docstrings.  I added a new rc param
           docstring.harcopy, to format the docstrings differently for
           hardcopy and other use.  Ther ArtistInspector could use a
           little refactoring now since there is duplication of effort
           between the rest out put and the non-rest output - JDH

2008-12-08 Updated spectral methods (psd, csd, etc.) to scale one-sided
           densities by a factor of 2 and, optionally, scale all densities